templates/gw.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ingress-gateway
  namespace: openshift-ingress
  annotations:
    networking.istio.io/service-type: ClusterIP
  labels:
    kuadrant.io/gateway: "true"
spec:
    gatewayClassName: openshift-default
    listeners:
    - allowedRoutes:
        namespaces:
          from: All 
      hostname: "*.gwapi.apps.cluster-jsn9w.dynamic2.redhatworkshops.io"
      name: api
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
        - group: ""
          kind: Secret
          name: api-ingress-gateway-tls
        mode: Terminate
