templates/rt.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ingress-gateway-cl
  namespace: openshift-ingress
  labels:
    gateway.istio.io/managed: openshift.io-gateway-controller-v1
    gateway.networking.k8s.io/gateway-name: ingress-gateway
spec:
  host: api.ingress-gateway-cl.apps.cluster-jsn9w.dynamic2.redhatworkshops.io
  to:
    kind: Service
    name: ingress-gateway-openshift-default
    weight: 100
  port:
    targetPort: https
  tls:
    termination: edge
